syntax = "proto3";

package services;

import "types.proto";

service RPCService {
  rpc SendMessage(RpcMessage) returns (RpcResponse);
}

message RpcMessage {
  oneof message {
    types.Intent intent = 1;
    types.DkgMessage dkg = 2;
  }
}

message RpcResponse {
  string result = 1;
}